'Сверстан-верхний-блок'

--- a/index.html
+++ b/index.html
@@ -5,12 +5,64 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Movee | Квартирные переезды</title>
 </head>
 <body>
-    <h1>Working</h1>
+    <header class="header">
 
+        <img class="header__car" src="./image/header/car.png" alt="Car Movee">
+        <img class="header__man" src="./image/header/man.png" alt="Man Movee">
+        <div class="container">
+            <div class="header__top">
+                <div class="logo">
+                    <a href="#">movee</a>
+                </div>
+                <nav class="menu">
+                        <li><a href="#">Цены</a></li>
+                        <li><a href="#">Автопарк</a></li>
+                        <li><a href="#">Отзывы</a></li>
+                        <li><a href="#">Контакты</a></li>
+                </nav>
+                <div class="tel">
+                    <a href="tel:+79282636313">8(800)-082-12-12</a>
+                </div>
+            </div>
+            <div class="header__title">
+                <h1>Квартирные переезды</h1>
+                <p class="title__description">По Москве и области</p>
+                <button class="btn-red btn">Заказать</button>
+                <div class="advantage">
+                    <div class="advantage__item">
+                        <div class="item__icon">
+                            <img src="https://img.icons8.com/wired/64/000000/truck.png"/>
+                        </div>
+                        <div class="item__text">
+                            <p>Более 800 переездов</p>
+                        </div>
+                    </div>
+                    <div class="advantage__item">
+                        <div class="item__icon">
+                            <img src="https://img.icons8.com/pastel-glyph/64/000000/box--v4.png"/>
+                        </div>
+                        <div class="item__text">
+                            <p>Бережная упаковка</p>
+                        </div>
+                    </div>
+                    <div class="advantage__item">
+                        <div class="item__icon">
+                            <img src="https://img.icons8.com/wired/64/000000/money.png"/>
+                        </div>
+                        <div class="item__text">
+                            <p>Фиксированная цена</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <script src="js/script.js"></script>
 </body>
