'Сверстано-несколько-секций-и-слайдер'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./slider/slick/slick.css">
+    <link rel="stylesheet" href="./slider/slick/slick-theme.css">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Movee | Квартирные переезды</title>
@@ -63,7 +64,141 @@
             </div>
         </div>
     </header>
+    <section class="main">
+        <div class="container">
+            <div class="stages">
+                <div class="stages__title">
+                    <h2>Как это происходит?</h2>
+                </div>
+                <div class="stages__item-wrapper">
+                    <div class="stages__item">
+                        <div class="item__num">
+                            <span>01</span>
+                        </div>
+                        <div class="item__text">
+                            <h3>Оценка объема предстоящих работ</h3>
+                            <p>Стоимость переезда зависит от количества комнат, вещей и мебели.</p>
+                        </div>
+                    </div>
+                    <div class="stages__item">
+                        <div class="item__num">
+                            <span>02</span>
+                        </div>
+                        <div class="item__text">
+                            <h3>Упаковываем вещи</h3>
+                            <p>Упаковываем вещи в коробки, подписываем. Габаритное и деликатное,  упаковываем отдельно.</p>
+                        </div>
+                    </div>
+                    <div class="stages__item">
+                        <div class="item__num">
+                            <span>03</span>
+                        </div>
+                        <div class="item__text">
+                            <h3>Погрузка и транспортировка вещей</h3>
+                            <p>В нашем автопарке имеются машины, подходящие для мебели любых габаритов.</p>
+                        </div>
+                    </div>
+                    <div class="stages__item">
+                        <div class="item__num">
+                            <span>04</span>
+                        </div>
+                        <div class="item__text">
+                            <h3>Распаковка и расстановка мебели</h3>
+                            <p>Опытные грузчики быстро расставят мебель и уберут мусор от распаковки.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="prices">
+                <div class="prices__title">
+                    <h3>Цены</h3>
+                    <p>Фиксированная стоимость на переезд под ключ</p>
+                </div>
+                <div class="card-wrap">
+                    <div class="card">
+                        <p class="card__top">1-комнатная кв-ра</p>
+                        <span>1 фургон</span>
+                        <span>2 грузчика</span>
+                        <span>Переезд за 4 часа</span>
+                        <strong>8 490₽</strong>
+                        <button class="btn-cta btn">Заказать</button>
+                    </div>
+                    <div class="card">
+                        <p class="card__top">2-комнатная кв-ра</p>
+                        <span>1 газель - 3 метра </span>
+                        <span>2 грузчика</span>
+                        <span>Переезд за 4 часа</span>
+                        <strong>10 990₽ </strong>
+                        <button class="btn-cta btn">Заказать</button>
+                    </div>
+                    <div class="card">
+                        <p class="card__top">3-комнатная кв-ра</p>
+                        <span>1 фургон - 4 метра</span>
+                        <span>2 грузчика</span>
+                        <span>Переезд за 6 часа</span>
+                        <strong>16 490₽</strong>
+                        <button class="btn-cta btn">Заказать</button>
+                    </div>
+                </div>
+            </div>
+            <div class="auto">
+                <div class="auto__title">
+                    <h3>Автопарк</h3>
+                    <p>10 видов автомобилей от 800 кг до 10 тонн</p>
+                </div>
+                <div class="auto__slider">
+                    <div class="slider__title">
+                        <a href="#">Газели</a></li>
+                        <a href="#">Каблуки</a>
+                        <a href="#">Грузовики</a>
+                    </div>
+                    <div class="slider__wrap">
+                        <div class="slider">
+                            <div class="slide">
+                                <div class="feature">
+                                    <p>Газель 3 метра</p>
+                                    <span>Ширина 2 м</span>
+                                    <span>Высота 2 м</span>
+                                    <span>Объем 16 м³</span>
+                                    <span>Грузоподъемность 1,5 т</span>
+                                    <button class="btn-cta btn">Заказать</button>
+                                </div>
+                                <div class="automobile">
+                                    <img src="./image/main/slider/auto.png" alt="Газель"></div>
+                            </div>
+                            <div class="slide">
+                                <div class="feature">
+                                    <p>Газель 6 метров</p>
+                                    <span>Ширина 3 м</span>
+                                    <span>Высота 2 м</span>
+                                    <span>Объем 32 м³</span>
+                                    <span>Грузоподъемность 2,5 т</span>
+                                    <button class="btn-cta btn">Заказать</button>
+                                </div>
+                                <div class="automobile">
+                                    <img src="./image/main/slider/auto.png" alt="Газель"></div>
+                            </div>
+                            <div class="slide">
+                                <div class="feature">
+                                    <p>Газель 3 метра</p>
+                                    <span>Ширина 2 м</span>
+                                    <span>Высота 2 м</span>
+                                    <span>Объем 16 м³</span>
+                                    <span>Грузоподъемность 1,5 т</span>
+                                    <button class="btn-cta btn">Заказать</button>
+                                </div>
+                                <div class="automobile">
+                                    <img src="./image/main/slider/auto.png" alt="Газель"></div>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="./slider/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
