--- a/index.html
+++ b/index.html
@@ -197,6 +197,40 @@
             </div>
         </div>
     </section>
+    <section class="reviews">
+        <div class="container">
+            <div class="comment">
+                <div class="comment__title">
+                    <h2>Отзывы</h2>
+                </div>
+                <div class="comment__wrapper">
+                    <div class="comment__item">
+                        <h5>Ирина</h5>
+                        <span>20.06.2020</span>
+                        <p>Обращение к вам за помощью в переезде оставило только положительные впечатления. Хотелось отметить замечательного водителя газели Алексея. Были трудности с заездом
+                            во двор, он проявил себя как компетентный
+                            и профессиональный сотрудник, за что ему огромное Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, voluptate.</p>
+                        <a href="#">Читать полностью</a>
+                    </div>
+                    <div class="comment__item">
+                        <h5>Светлана Васильевна</h5>
+                        <span>13.09.2020</span>
+                        <p>Сегодня ( 13.09.2019 ) мы переехали. Остались очень довольны, несмотря на то, что к нам опоздали на 1,5 часа. Морально были к этому готовы ( в прошлый переезд в другой фирме тоже опоздали на час).  Водитель заранее позвонил, предупредил, что задерживается.Когда Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, quas!</p>
+                        <a href="#">Читать полностью</a>
+                    </div>
+                    <div class="comment__item">
+                        <h5>Ольга Петрова</h5>
+                        <span>24.11.2020</span>
+                        <p>Могу на 100% порекомендовать компанию MOVEE и отметить, что цены фиксированы, что упрощает расчет. Безо всяких заморочек, в отличии от их конкурентов. Упаковали все качественно и быстро. Все вещи приехали в сохранности. Особлая благодарность Александру за его Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, voluptatum.</p>
+                        <a href="#">Читать полностью</a>
+                    </div>
+                </div>
+                <div class="comment__btn">
+                    <a href="#">Все отзывы</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./slider/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
