--- a/index.html
+++ b/index.html
@@ -231,8 +231,74 @@
             </div>
         </div>
     </section>
+    <section class="form">
+        <div class="form__wrapper">
+            <h3>Закажи переезд прямо сейчас</h3>
+            <span>Мы перезвоним в течении 10 секунд</span>
+            <form action="#">
+                <input placeholder="Ваше имя" type="text">
+                <input placeholder="Телефон" type="text">
+                <div class="form__cta">
+                    <button>Перезвонить мне</button>
+                    <div class="cta__text">
+                        <input type="checkbox">
+                        <p> Даю согласие на обработку данных</p>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+    </section>
+    <section class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d136739.69153631452!2d37.738952889012516!3d55.733074077598474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab5269715db59%3A0x3c9ede46f385b391!2z0JLQvtC70LPQvtCz0YDQsNC00YHQutC40Lkg0L_RgC3Rgi4sIDM4LCDQnNC-0YHQutCy0LAsIDEwOTMxNg!5e0!3m2!1sru!2sru!4v1597744454045!5m2!1sru!2sru" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div class="map__title">
+            <h3>MOVEE</h3>
+            <span>Москва, Волгоградский пр-т, 38</span>
+            <a class="title-tel" href="#">8 (800)-080-12-13</a>
+            <a class="title-email" href="#">hello@movee.ru</a>
+            <p>
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                <i class="fa fa-vk" aria-hidden="true"></i>
+                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </p>
+
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="footer-wrapper">
+                <div class="politics">
+                    <h3>MOVEE</h3>
+                    <a href="#">Политика конфиденциальнности</a>
+                    <a href="#">Соглашение на обработку персональных данных</a>
+                </div>
+                <div class="pages">
+                    <a href="#">Главная</a>
+                    <a href="#">Цена</a>
+                    <a href="#">Автопарк</a>
+                    <a href="#">Отзывы</a>
+                    <a href="#">Контакты</a>
+                </div>
+                <div class="social">
+                    <p>
+                        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        <i class="fa fa-vk" aria-hidden="true"></i>
+                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </p>
+                    <a href="#">hello@movee.ru</a>
+                </div>
+                <div class="footer__cta">
+                    <button>Обратный звонок</button>
+                    <a href="#">8 (800)-080-12-13</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./slider/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://use.fontawesome.com/42ff4e0845.js"></script>
 </body>
 </html>
